feat(archetype): add organization user vertical